#3882 partially fixed (Stephanie? :-)): 5.  The tab panels have a fixed height and do not fill the vertical space with larger browser windows. This looks especially strange in the Statistics panel where the results panel is cut off with a lot of white space below.
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@31923 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/theme/public/gwt/clean/clean-2.css
+++ b/web/src/geogebra/theme/public/gwt/clean/clean-2.css
@@ -2575,6 +2575,11 @@ label {
 	background: white;
 }
 
+.StatisticsCalculatorW .resultPane {
+	width: 99%;
+	min-height: 50%;
+}
+
 
 /*=========== Probability Calculator End =============*/
 
